Added more debugging logs.

--- a/cmd/kuberhealthy/Makefile
+++ b/cmd/kuberhealthy/Makefile
@@ -1,11 +1,11 @@
-# IMAGE="kuberhealthy/kuberhealthy"
-# TAG="2.2.0"
+# IMAGE="jlmatias/kuberhealthy"
+TAG="v2.2.1-1"
 
 build:
-	docker build -t kuberhealthy/kuberhealthy:v2.2.0 -f Dockerfile ../../
+	docker build -t jlmatias/kuberhealthy:$(TAG) -f Dockerfile ../../
 
 push:
-	docker push kuberhealthy/kuberhealthy:v2.2.0
+	docker push jlmatias/kuberhealthy:$(TAG)
 
 test:
 	POD_NAME="kuberhealthy-test" go test -run TestWebServer -v -args -- --debug --forceMaster
